Upgrade api version to 2.7
