# docs/openapi/pn-stream-api-internal.yaml
@@ -380,7 +380,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StreamMetadataResponseV26"
+                $ref: "#/components/schemas/StreamMetadataResponseV27"
         '400':
           description: Invalid input
           content:
@@ -405,20 +405,13 @@ paths:
             application/problem+json:
               schema:
                 $ref: 'remote-refs.yaml#/components/schemas/Problem'
-  '/delivery-progresses-2/v2.6/streams':
-    parameters: # NO EXTERNAL
-      - $ref: '#/components/parameters/uidAuthFleet'          # NO EXTERNAL
-      - $ref: '#/components/parameters/cxTypeAuthFleet'       # NO EXTERNAL
-      - $ref: '#/components/parameters/cxIdAuthFleet'         # NO EXTERNAL
-      - $ref: '#/components/parameters/cxGroupsAuthFleet'         # NO EXTERNAL
-      - $ref: '#/components/parameters/headerApiVersion'         # NO EXTERNAL
     get:
       summary: Elenca stream di eventi
       description: >-
         Elenca gli stream di eventi
       tags:
         - Streams
-      operationId: listEventStreamsV26
+      operationId: listEventStreamsV27
       responses:
         '200':
           description: OK
@@ -442,7 +435,7 @@ paths:
     ############################################################################################
     ###                        lEGGI METADATA DELLO STREAM                                   ###
     ############################################################################################
-  '/delivery-progresses-2/v2.6/streams/{streamId}':
+  '/delivery-progresses-2/v2.7/streams/{streamId}':
     parameters:
       - $ref: '#/components/parameters/uidAuthFleet'          # NO EXTERNAL
       - $ref: '#/components/parameters/cxTypeAuthFleet'       # NO EXTERNAL
@@ -456,15 +449,15 @@ paths:
         Lettura delle configurazioni di uno stream di eventi.
       tags:
         - Streams
-      operationId: getEventStreamV26                             # NO EXTERNAL
-      #      operationId: retrieveEventStreamV26                       # ONLY EXTERNAL
+      operationId: getEventStreamV27                             # NO EXTERNAL
+      #      operationId: retrieveEventStreamV27                       # ONLY EXTERNAL
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StreamMetadataResponseV26"
+                $ref: "#/components/schemas/StreamMetadataResponseV27"
         '400':
           description: Invalid input
           content:
@@ -495,20 +488,20 @@ paths:
         Modifica delle configurazioni dei filtri associati a uno stream di eventi
       tags:
         - Streams
-      operationId: updateEventStreamV26
+      operationId: updateEventStreamV27
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/StreamRequestV26"
+              $ref: "#/components/schemas/StreamRequestV27"
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StreamMetadataResponseV26"
+                $ref: "#/components/schemas/StreamMetadataResponseV27"
         '400':
           description: Invalid input
           content:
@@ -540,8 +533,8 @@ paths:
         associati allo stream e non ancora consumati.
       tags:
         - Streams
-      operationId: deleteEventStreamV26                          # NO EXTERNAL
-      #      operationId: removeEventStreamV26                         # ONLY EXTERNAL
+      operationId: deleteEventStreamV27                          # NO EXTERNAL
+      #      operationId: removeEventStreamV27                         # ONLY EXTERNAL
       responses:
         '204':
           description: OK
@@ -574,7 +567,7 @@ paths:
   ###                             DISABILITARE UNO STREAM                                  ###
   ############################################################################################
 
-  '/delivery-progresses-2/v2.6/streams/{streamId}/action/disable':
+  '/delivery-progresses-2/v2.7/streams/{streamId}/action/disable':
     post:
       summary: Disabilita uno stream
       description: >-
@@ -592,7 +585,7 @@ paths:
         eliminato automaticamente dopo <span id="webhookTtlDisabled">14</span> giorni.
       tags:
         - Streams
-      operationId: disableEventStreamV26
+      operationId: disableEventStreamV27
       parameters:
         - $ref: '#/components/parameters/uidAuthFleet'          # NO EXTERNAL
         - $ref: '#/components/parameters/cxTypeAuthFleet'       # NO EXTERNAL
@@ -606,7 +599,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StreamMetadataResponseV26"
+                $ref: "#/components/schemas/StreamMetadataResponseV27"
         '400':
           description: Invalid input
           content:
@@ -636,7 +629,7 @@ paths:
     ###                             LETTURA EVENTI DA UNO STREAM                             ###
     ############################################################################################
 
-  '/delivery-progresses-2/v2.6/streams/{streamId}/events':
+  '/delivery-progresses-2/v2.7/streams/{streamId}/events':
     get:
       summary: Leggi progressi notifiche
       description: >-
@@ -645,7 +638,7 @@ paths:
         e tutti gli eventi precedenti. Tali eventi potranno essere cancellati dallo stream.
       tags:
         - Events
-      operationId: consumeEventStreamV26
+      operationId: consumeEventStreamV27
       parameters:
         - $ref: '#/components/parameters/uidAuthFleet'          # NO EXTERNAL
         - $ref: '#/components/parameters/cxTypeAuthFleet'       # NO EXTERNAL
@@ -672,7 +665,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ProgressResponseV26"
+                $ref: "#/components/schemas/ProgressResponseV27"
         '429':
           description: Too Many Requests
           headers:
@@ -817,7 +810,7 @@ components:
       description: Richiesta di creazione di uno stream di eventi di avanzamento delle notifiche. Lo stream verrà creato nello stato abilitato
       type: object
       allOf:
-        - $ref: '#/components/schemas/StreamRequestV26'
+        - $ref: '#/components/schemas/StreamRequestV27'
         - type: object
           properties:
             replacedStreamId:
@@ -829,12 +822,8 @@ components:
                 La creazione del nuovo stream è soggetta al controllo di autorizzazione dell'apiKey sui gruppi del precedente stream.
               type: string
               format: uuid
-            waitForAccepted:
-              description: todo
-              type: boolean
-              default: false
 
-    StreamRequestV26:
+    StreamRequestV27:
       description: >-
         Struttura comune per eventi di creazione/aggiornamento di uno stream di eventi di avanzamento delle notifiche.
         L'aggiornamento delle proprietà dello stream è soggetta al controllo di autorizzazione dell'apiKey sui gruppi.
@@ -880,16 +869,20 @@ components:
             minLength: 4
             maxLength: 256
             pattern: ^[A-Z_]+$
+        waitForAccepted:
+          description: TODO
+          type: boolean
+          default: false
 
     StreamGroup:
       type: string
       description: >-
         Identificativo del gruppo.
 
-    StreamMetadataResponseV26:
+    StreamMetadataResponseV27:
       description: Configurazioni di un flusso di eventi
       allOf:
-        - $ref: '#/components/schemas/StreamRequestV26'
+        - $ref: '#/components/schemas/StreamRequestV27'
         - type: object
           required:
             - streamId
@@ -946,12 +939,12 @@ components:
     ###  - EVENTI GENERATI DA PN
     ###################################
 
-    ProgressResponseV26:
+    ProgressResponseV27:
       type: array
       items:
-        $ref: '#/components/schemas/ProgressResponseElementV26'
+        $ref: '#/components/schemas/ProgressResponseElementV27'
 
-    ProgressResponseElementV26:
+    ProgressResponseElementV27:
       type: object
       required:
         - eventId
