# src/main/java/it/pagopa/pn/stream/dto/ProgressResponseElementDto.java
@@ -1,6 +1,6 @@
 package it.pagopa.pn.stream.dto;
 
-import it.pagopa.pn.stream.generated.openapi.server.v1.dto.ProgressResponseElementV26;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.ProgressResponseElementV27;
 import lombok.Builder;
 import lombok.Data;
 
@@ -9,6 +9,6 @@ import java.util.List;
 @Data
 @Builder
 public class ProgressResponseElementDto {
-    private List<ProgressResponseElementV26> progressResponseElementList;
+    private List<ProgressResponseElementV27> progressResponseElementList;
     private int retryAfter;
 }
