# src/main/java/it/pagopa/pn/stream/middleware/dao/dynamo/mapper/DtoToEntityStreamMapper.java
@@ -3,7 +3,7 @@ package it.pagopa.pn.stream.middleware.dao.dynamo.mapper;
 import it.pagopa.pn.stream.config.PnStreamConfigs;
 
 import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV27;
-import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV26;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV27;
 import it.pagopa.pn.stream.middleware.dao.dynamo.entity.StreamEntity;
 import java.util.Set;
 import org.springframework.beans.BeanUtils;
@@ -32,7 +32,7 @@ public class DtoToEntityStreamMapper {
         return streamEntity;
     }
 
-    public static StreamEntity dtoToEntity(String paId, String streamId, String version, StreamRequestV26 dto) {
+    public static StreamEntity dtoToEntity(String paId, String streamId, String version, StreamRequestV27 dto) {
         StreamCreationRequestV27 creationRequestv23 = new StreamCreationRequestV27();
         BeanUtils.copyProperties(dto, creationRequestv23);
         creationRequestv23.setEventType(StreamCreationRequestV27.EventTypeEnum.fromValue(dto.getEventType().getValue()));
